# prod-ready-ml-public

./: .pre-commit-config.yaml  hello_api.py  pyproject.toml  requirements.txt  responsive_api.py  sleepy_api.py  tests.py
.github/workflows/: ci.yaml  pre-commit.yml
notebooks/: 01_packaging.ipynb  02_code_quality.ipynb  03_quality_checks.ipynb  04_unit_tests.ipynb  05_more_testing.ipynb  06_logging.ipynb
notebooks/context_managers/: 01_Context_Managers.ipynb  context_manager_examples.py
notebooks/context_managers/answers/: ex-build1.py  ex-build2.py  ex-convert1.py  ex-convert2.py  ex-use1.py  ex-use2.py  ex-use3.py
notebooks/context_managers/data/: alice.txt  example.txt  pride.txt
notebooks/decorators_pipelines/: Decorators.ipynb  Pandas_Pipelines.ipynb
notebooks/decorators_pipelines/answers/: ex-decorators1-bonus.py  ex-decorators1.py  ex-decorators2-bonus.py  ex-decorators2.1.py  ex-decorators2.2.py  ex-decorators2.3.py
notebooks/decorators_pipelines/answers/pandas_pipelines/: pipeline.py
notebooks/fastapi/: 01_Fastapi_Intro.ipynb  02_Pydantic.ipynb  04_Fastapi_Responses.ipynb  05_Testing_Fastapi.ipynb  app.py  hello_api.py  responsive_api.py  sleepy_api.py
notebooks/generators_iterators/: 01_Iterators.ipynb  02_Generators.ipynb
notebooks/generators_iterators/answers/: ex-gen-build1.py  ex-gen-build2.py  ex-gen-build3.py  ex-gen-use1.py  ex-gen-use2.py  ex-gen-use3.py  ex-powtwo-1.py  ex-powtwo-2.py
notebooks/oop/: 01_Classes_and_Attributes.ipynb  02_Parent_Child_Classes.ipynb  03_Better_Integration.ipynb  04_Assignment_Parent_and_Dunder_Methods.ipynb  05_getitem_and_setitem.ipynb  06_Uninstantiated_Classes.ipynb  07_Data_Classes.ipynb  08_Protect_Private_Variables.ipynb  09_Hackathon.ipynb
notebooks/oop/answers/: ex-bonus-1-add.py  ex-bonus-2-dealer.py  ex-bonus-3-compare.py  ex-cards-method.py  ex-dunder-1.py  ex-dunder-2.py  ex-dunder-3.py  ex-methods-1.py  ex-methods-2.py  ex-methods-3.py  ex-themed-card-set.py
src/: .pre-commit-config.yaml
src/animal_shelter/: __init__.py  data.py  features.py  old_features.py
src/animal_shelter/model/: __init__.py  predict.py  train.py
tests/: test_check_has_name.py  test_convert_camel_case.py  test_data.py  test_features.py  test_model.py  test_predict.py  test_train.py
