[project]
name = "animal-shelter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruben Sanderson", email = "sanderson.ruben@ah.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
]

[project.scripts]
animal-shelter = "animal_shelter:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.20.2",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "scikit-learn-stubs>=0.0.3",
]

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  "D",  # pydocstyle
  "N",  # PEP8 names
  "I"  # isort
]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["joblib"]
ignore_missing_imports = true
