[project]
name = "animal-shelter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]

[project.scripts]
animal-shelter = "animal_shelter:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.20.2",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "scipy-stubs>=1.17.1.4",
]

[tool.ruff]
exclude = [
    "notebooks",
]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "N",   # PEP8 naming
  "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true
# Or for less aggressive:
# disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib"]
ignore_missing_imports = true
